# websocket_tcp_gui

./: Cargo.toml  README.md  pygcc.pyi  pyproject.toml
crates/pyframe_macros/: Cargo.toml
crates/pyframe_macros/src/: lib.rs
examples/: base.py  basic.html
pyframe/: __init__.py  connections.py  core.py  pyinvoke.py  runtime.py  runtime_handle.py  utils.py
pyframe/control/: window.py
src/: api.rs  api_manager.rs  connections.rs  context.rs  core.rs  lib.rs  utils.rs
src/assets/: invoke.js
