[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pygcc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["anyhow", "extension-module", "generate-import-lib"] }
pyo3-log = "0.12"
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
pyo3-async-runtimes-macros = "0.25"

tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }

async-trait = "0.1.88"
anyhow = "1.0.91"
bytes = "1.10.1"
crossbeam-channel = "0.5.15"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4"] }
tao = { version = "0.34.2", features = ["serde"] }
wry = { version ="0.53.2", features = ["devtools"] }
url = { version = "2.5.7", features = ["serde"] }
once_cell = "1.21.3"
image = "0.25.6"
mime_guess = "2.0.5"
directories = "6.0.0"
pyframe_macros = {path="./crates/pyframe_macros"}



[workspace]
members = [
	"crates/pyframe_macros",
]